kubernete_yaml/bill/billpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: billms-pod
  labels:
    name: billms-pod
    app: pizzashop
spec:
  containers: 
    - name: billms-pod
      image: bhumswrang/billms
      ports:
      - containerPort: 8088
