kubernete_yaml/bill/billingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bill-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: msbill.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bill-inservice
            port:
              number: 8088
